<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientpurple"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/ThemesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="80dp"
        android:layout_marginVertical="100dp"
        android:layout_marginEnd="119dp"
        android:text="@string/themes"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Regular"
        android:layout_width="289dp"
        android:layout_height="63dp"
        android:layout_above="@+id/Dark"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="71dp"
        android:text="@string/regular"
        android:textColor="@color/black"
        android:textSize="25sp"
        tools:ignore="OnClick,UsingOnClickInXml" />

    <Button
        android:id="@+id/Dark"
        android:layout_width="287dp"
        android:layout_height="63dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="302dp"
        android:text="@string/dark"
        android:textColor="@color/black"
        android:textSize="25sp"
        tools:ignore="OnClick,UsingOnClickInXml" />

    <Button
        android:id="@+id/Light"
        android:layout_width="287dp"
        android:layout_height="63dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="177dp"
        android:text="@string/light"
        android:textColor="@color/black"
        android:textSize="25sp"
        tools:ignore="OnClick,UsingOnClickInXml" />

</RelativeLayout>